<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.izv.paint.HerramientasDibujo">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/dedos"
            android:id="@+id/textView" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dedo_1"
                android:id="@+id/d1"
                android:onClick="dedo1" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dedo_2"
                android:id="@+id/d2"
                android:onClick="dedo2" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dedo_3"
                android:id="@+id/d3"
                android:onClick="dedo3" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/forma"
            android:id="@+id/textView3" />

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aceptar"
        android:id="@+id/button"
        android:onClick="aceptar"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/linearLayout5"
        android:layout_alignEnd="@+id/linearLayout5" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout"
        android:gravity="center"
        android:layout_below="@+id/linearLayout2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <ImageButton
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:id="@+id/b1"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:src="@drawable/recta"
            android:onClick="recta" />

        <ImageButton
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:id="@+id/b2"
            android:src="@drawable/circulolineas"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/b1"
            android:layout_toEndOf="@+id/b1"
            android:onClick="lineasdesdepunto" />

        <ImageButton
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:id="@+id/b3"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/b2"
            android:layout_toEndOf="@+id/b2"
            android:src="@drawable/lineadiscontinua"
            android:onClick="caminohormigas" />

        <ImageButton
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:id="@+id/b4"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/b3"
            android:layout_toEndOf="@+id/b3"
            android:src="@drawable/cuadradolinea"
            android:onClick="cuadradolinea" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout3">

        <ImageButton
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:id="@+id/b5"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/b4"
            android:layout_toEndOf="@+id/b4"
            android:src="@drawable/cuadradorellena"
            android:onClick="cuadradorelleno" />

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent"></TableRow>

        <ImageButton
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:id="@+id/b6"
            android:src="@drawable/circulolinea"
            android:onClick="circulolinea" />

        <ImageButton
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:id="@+id/b7"
            android:src="@drawable/circulorelleno"
            android:onClick="circulorelleno" />

        <ImageButton
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:id="@+id/b8"
            android:src="@drawable/elipcelinea"
            android:onClick="ovallinea" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout3"
        android:layout_alignRight="@+id/linearLayout3"
        android:layout_alignEnd="@+id/linearLayout3"
        android:orientation="vertical"
        android:id="@+id/linearLayout4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <ImageButton
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:id="@+id/b9"
                android:onClick="ovalrelleno"
                android:src="@drawable/elipcerellena" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/borrar"
                android:id="@+id/textView4"
                android:layout_below="@+id/linearLayout4"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="50dp" />

            <ImageButton
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:id="@+id/b10"
                android:layout_below="@+id/textView4"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:src="@drawable/borrar"
                android:layout_marginRight="10dp"
                android:onClick="borrar" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/tamaño"
            android:id="@+id/textView2" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tamaño1"
                android:id="@+id/t1"
                android:onClick="tamaño1" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tamaño3"
                android:id="@+id/t3"
                android:onClick="tamaño3" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tamaño5"
                android:id="@+id/t5"
                android:onClick="tamaño5" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:gravity="center_vertical"
        android:id="@+id/linearLayout5">

    </LinearLayout>

</RelativeLayout>
